
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct modify_ldt_ldt_s {int entry_number; int seg_32bit; int base_addr; int limit; } ;
typedef int l ;


 int ENTRY_MAGIC ;
 int LDT_ENTRIES ;
 int MAGIC ;
 int fatal (char*) ;
 int find (unsigned int*) ;
 int map (unsigned int*) ;
 int memset (struct modify_ldt_ldt_s*,int ,int) ;
 int modify_ldt (int,struct modify_ldt_ldt_s*,int) ;

void ldt(unsigned * m)
{
struct modify_ldt_ldt_s l;
map(m);
memset(&l, 0, sizeof(l));
l.entry_number = LDT_ENTRIES - 1;
l.seg_32bit = 1;
l.base_addr = MAGIC >> 16;
l.limit = MAGIC & 0xffff;
if (modify_ldt(1, &l, sizeof(l)) == -1)
fatal("Unable to set up LDT");
l.entry_number = ENTRY_MAGIC / 2;
if (modify_ldt(1, &l, sizeof(l)) == -1)
fatal("Unable to set up LDT");
find(m);
}
