; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_131.c_ldt.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_131.c_ldt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.modify_ldt_ldt_s = type { i32, i32, i32, i32 }

@LDT_ENTRIES = common dso_local global i32 0, align 4
@MAGIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"Unable to set up LDT\00", align 1
@ENTRY_MAGIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ldt(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.modify_ldt_ldt_s, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @map(i32* %4)
  %6 = call i32 @memset(%struct.modify_ldt_ldt_s* %3, i32 0, i32 16)
  %7 = load i32, i32* @LDT_ENTRIES, align 4
  %8 = sub nsw i32 %7, 1
  %9 = getelementptr inbounds %struct.modify_ldt_ldt_s, %struct.modify_ldt_ldt_s* %3, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = getelementptr inbounds %struct.modify_ldt_ldt_s, %struct.modify_ldt_ldt_s* %3, i32 0, i32 1
  store i32 1, i32* %10, align 4
  %11 = load i32, i32* @MAGIC, align 4
  %12 = ashr i32 %11, 16
  %13 = getelementptr inbounds %struct.modify_ldt_ldt_s, %struct.modify_ldt_ldt_s* %3, i32 0, i32 2
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @MAGIC, align 4
  %15 = and i32 %14, 65535
  %16 = getelementptr inbounds %struct.modify_ldt_ldt_s, %struct.modify_ldt_ldt_s* %3, i32 0, i32 3
  store i32 %15, i32* %16, align 4
  %17 = call i32 @modify_ldt(i32 1, %struct.modify_ldt_ldt_s* %3, i32 16)
  %18 = icmp eq i32 %17, -1
  br i1 %18, label %19, label %21

19:                                               ; preds = %1
  %20 = call i32 @fatal(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %19, %1
  %22 = load i32, i32* @ENTRY_MAGIC, align 4
  %23 = sdiv i32 %22, 2
  %24 = getelementptr inbounds %struct.modify_ldt_ldt_s, %struct.modify_ldt_ldt_s* %3, i32 0, i32 0
  store i32 %23, i32* %24, align 4
  %25 = call i32 @modify_ldt(i32 1, %struct.modify_ldt_ldt_s* %3, i32 16)
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %27, label %29

27:                                               ; preds = %21
  %28 = call i32 @fatal(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %29

29:                                               ; preds = %27, %21
  %30 = load i32*, i32** %2, align 8
  %31 = call i32 @find(i32* %30)
  ret void
}

declare dso_local i32 @map(i32*) #1

declare dso_local i32 @memset(%struct.modify_ldt_ldt_s*, i32, i32) #1

declare dso_local i32 @modify_ldt(i32, %struct.modify_ldt_ldt_s*, i32) #1

declare dso_local i32 @fatal(i8*) #1

declare dso_local i32 @find(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
